logs/stomp_moveit/build.make.038.log.stderr
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_planner.cpp: In member function ‘virtual bool stomp_moveit::StompPlanner::solve(planning_interface::MotionPlanDetailedResponse&)’:
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_planner.cpp:282:51: error: no matching function for call to ‘robot_trajectory::RobotTrajectory::getRobotTrajectoryMsg()’
     res.trajectory_.back()->getRobotTrajectoryMsg();
                                                   ^
In file included from /opt/ros/melodic/include/moveit/planning_interface/planning_response.h:40:0,
                 from /opt/ros/melodic/include/moveit/planning_interface/planning_interface.h:42,
                 from /home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/include/stomp_moveit/stomp_planner.h:29,
                 from /home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_planner.cpp:28:
/opt/ros/melodic/include/moveit/robot_trajectory/robot_trajectory.h:208:8: note: candidate: void robot_trajectory::RobotTrajectory::getRobotTrajectoryMsg(moveit_msgs::RobotTrajectory&, const std::vector<std::__cxx11::basic_string<char> >&) const
   void getRobotTrajectoryMsg(moveit_msgs::RobotTrajectory& trajectory,
        ^~~~~~~~~~~~~~~~~~~~~
/opt/ros/melodic/include/moveit/robot_trajectory/robot_trajectory.h:208:8: note:   candidate expects 2 arguments, 0 provided
make[2]: *** [CMakeFiles/stomp_moveit.dir/src/stomp_planner.cpp.o] Error 1
make[1]: *** [CMakeFiles/stomp_moveit.dir/all] Error 2
make: *** [all] Error 2
